# flowable-external-client-python

./: .gitlab-ci.yml  README.md  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: main.yml  release.yml  test-release.yml
external-worker/: README.md  setup.py
external-worker/flowable/external_worker_client/: __init__.py  cloud_token.py  external_worker_acquire_job_response.py  response_converter.py  restclient.py  utils.py  worker_result.py
external-worker/tests/: basic_test.py  cmmn_utils.py  test_init.py  test_restclient.py  test_utils.py
flowable/external_worker_client/: __init__.py  list_result.py  request_converter.py  response_converter.py  restclient.py
flowable/robocorp_client/: robocorp_handler.py
flowableexternalworker/: __init__.py  engine_rest_variable.py  external_worker_acquire_job_response.py  external_worker_job_response.py  flowable_rest_exception.py  request_converter.py  response_converter.py  restclient.py  utils.py  worker_result.py
robocorp/: README.md  setup.py
robocorp/flowable/robocorp_client/: API.py  __main__.py  call_robocorp.py  robocorp_handler.py
robocorp/tests/: test_robocorp_client.py
rpaframework/: README.md  setup.py
rpaframework/docs/: robocorpExample.bpmn  rpaframeworkExample.bpmn
rpaframework/flowable/: .gitignore
rpaframework/flowable/rpaframework_client/: API.py  __main__.py  call_python_module.py  rpaframework_handler.py
rpaframework/tests/: basic_test.py  bpmn_utils.py  robocorp_action_weather.py  rpaframework_weather.robot  test_rpaframework_client.py  vcr.py
tests/: bpmn_utils.py  test_init.py  test_restclient.py
tests/fixtures/cases/: externalWorkerCase.cmmn
tests/fixtures/cassettes/: test_acquire_jobs.yml  test_complete_job.yml  test_consume.yml  test_consume_with_bpmn_error.yml  test_consume_with_cmmn_terminate.yml  test_job_with_bpmn_error_without_error_code_1_execute_first.yml  test_job_with_cmmn_terminate.yml  test_list_jobs.yml  test_subscribe_with_bpmn_error.yml
(+16 files in other folders)
