[project]
name = "eoepca-flowable.external-worker-client"
version = "0.1"
authors = [
    {name = "Flowable"},
    {name = "Mario Winkler", email="mario.winkler@dlr.de"}
]
description = "EOEPCA integration of Flowable External Worker Library for Python."
readme = "README.md"
requires-python = ">=3.8"
license = "Apache License, Version 2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.27.0"
]
[project.optional-dependencies]
testing = [
    "pytest",
    "vcrpy"
]

[project.urls]
Homepage = "https://github.com/EOEPCA/eoepca-flowable-external-client-python"
Issues = "https://github.com/EOEPCA/eoepca-flowable-external-client-python/issues"

[tool.setuptools]
packages = ["flowable", "flowable.external-worker-client"]

[tool.setuptools.package-dir]
flowable = "external-worker/flowable"
