[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowable.external-worker-client"
version = "0.1"
authors = [
    {name = "Flowable"},
    {name = "Mario Winkler", email="mario.winkler@dlr.de"}
]
description = "EOEPCA integration of Flowable External Worker Library for Python."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.27.0"
]
[project.optional-dependencies]
testing = [
    "pytest",
    "vcrpy"
]

[project.urls]
Homepage = "https://github.com/EOEPCA/eoepca-flowable-external-client-python"
Issues = "https://github.com/EOEPCA/eoepca-flowable-external-client-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["external-worker/flowable"]